@@ -86,6 +86,8 @@ PostGIS 2.1.0
   - #2078, New variants of ST_Slope, ST_Aspect and ST_HillShade to provide
     solution to handling tiles in a coverage
   - #2097, Added RANGE uniontype option for ST_Union(raster)
+  - #2105, Added ST_Transform(raster) variant for aligning output to
+    reference raster
 
 * Fixes *
 
